<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.movieapplication.screens.searchmovie.SearchMovieViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/movie_listView_imageView"
                android:layout_width="111dp"
                android:layout_height="173dp"
                android:contentDescription="@string/movie_listView_imageView_contentDescription"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/film_poster_placeholder"
                />
            <!--                app:moviePoster="@{viewModel.searchResults.get(0).posterUrl}"-->

            <TextView
                android:id="@+id/movie_listView_textView_movieName"
                android:layout_width="197dp"
                android:layout_height="19dp"
                android:text="@string/movie_listView_textView_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toEndOf="@+id/movie_listView_imageView"
                app:layout_constraintTop_toTopOf="@+id/movie_listView_imageView" />

            <TextView
                android:id="@+id/movie_listView_releaseDateTextView"
                android:layout_width="197dp"
                android:layout_height="19dp"
                android:text="@string/movie_listView_releaseDateTextView_text"
                app:layout_constraintBottom_toTopOf="@+id/movie_listView_synopsisTextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toEndOf="@+id/movie_listView_imageView"
                app:layout_constraintTop_toBottomOf="@+id/movie_listView_textView_movieName" />

            <TextView
                android:id="@+id/movie_listView_synopsisTextView"
                android:layout_width="197dp"
                android:layout_height="19dp"
                android:text="@string/movie_listView_synopsisTextView_text"
                app:layout_constraintBottom_toTopOf="@+id/movie_listView_viewButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toEndOf="@+id/movie_listView_imageView"
                app:layout_constraintTop_toBottomOf="@+id/movie_listView_textView_movieName"
                app:layout_constraintVertical_bias="0.621" />

            <Button
                android:id="@+id/movie_listView_viewButton"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:text="@string/movie_listView_viewButton_Text"
                app:layout_constraintBottom_toBottomOf="@+id/movie_listView_imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.767"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_listView_textView_movieName"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>