<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.MainActivity">

        <ImageView
            android:id="@+id/logo_imageView"
            style="@style/style_logo"
            android:contentDescription="@string/logo_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.499"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/home_ticket_logo" />

        <TextView
            android:id="@+id/homeScreen_title_textView"
            android:text="@string/homeScreen_title_textView_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_imageView"
            app:layout_constraintVertical_bias="0.0"
            style="@style/style_title" />

        <Button
            android:id="@+id/toSearchMovie_button"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:text="@string/toSearchMovie_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeScreen_title_textView"
            app:layout_constraintVertical_bias="0.988"
            style="@style/style_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>